--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    
+    <main>
       <div class="global-wrap">
         <div class="sidebar-wrap">
           <img src="pics/iphone.png" alt="phone with instagram" />
@@ -53,7 +53,7 @@
         </div>
         </div>
       </div>
-   
+    </main>
     <footer>
         <nav class="links">
             <ul>
@@ -71,6 +71,7 @@
                 <a href="#"><li>Contact</li></a>
                 <a href="#"><li>Contact</li></a>
               </ul>
+              <hr>
         </nav>
         <select name="language" id="English">
             <option style="background-color:#fafafa" value="english">English</option>
